k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blogapp-backend
  namespace: blogapp
  labels:
    app: blogapp-backend
spec:
  replicas: 2

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1

  selector:
    matchLabels:
      app: blogapp-backend

  template:
    metadata:
      labels:
        app: blogapp-backend

    spec:
      containers:
        - name: backend
          image: 354596761006.dkr.ecr.ap-south-1.amazonaws.com/blogapp-backend:sha-420de1b
          imagePullPolicy: IfNotPresent

          ports:
            - name: http
              containerPort: 5000
              protocol: TCP

          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 15
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3

          readinessProbe:
            httpGet:
              path: /readyz
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3

          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi

          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL

      restartPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: blogapp-backend
  namespace: blogapp
  labels:
    app: blogapp-backend
spec:
  type: ClusterIP

  selector:
    app: blogapp-backend

  ports:
    - name: http
      port: 5000
      targetPort: http
      protocol: TCP
